--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     }
 
 
+    .row.dragging {
+        opacity: 0.5;
+    }
+        
     /* Add a modal style */
     .modal {
         display: none;
@@ -75,7 +79,6 @@
         }
     </style>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
 
 <body>
